# loggin-AI-agent

./: README.md  docker-compose.yml
.github/workflows/: main.yml
agent/: Dockerfile  README.md  app.py  pyproject.toml  requirements.txt
agent/src/monitoring_agent/: __init__.py  analyzer.py  app.py  main.py  models.py  prediction.py  storage.py
agent/src/monitoring_ai_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
k8s/: ui-deployment.yaml  ui-ingress.yaml  ui-service.yaml
ui/: Dockerfile  package-lock.json  package.json
ui/src/: App.tsx
ui/src/components/: Alerts.tsx  Console.tsx  Dashboard.tsx  Header.tsx  Predictions.tsx  Sidebar.tsx
ui/src/services/: api.ts
